Divided content into three pages
Modified the sidemenu and added a picture to make the index page less boring.

--- a/layout1.conf
+++ b/layout1.conf
@@ -69,8 +69,10 @@ endif::latexmath[]
 <table>
 <tr valign="top">
 <td id="layout-menu">
-  <div>&#187;<a href="index.html">Home</a></div>
-   <div id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
+  <div><a href="index.html">About</a></div>
+  <div><a href="development.html">Development</a></div>   
+  <div><a href="contact.html">Contact</a></div>
+  <div id="page-source"><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
 </td>
 <td>
 <div id="layout-content">
