Fixed bad sectioning
Eventually pages are valid HTML.

Added a (commented out) item "Credits" in the sidemenu.

--- a/layout1.conf
+++ b/layout1.conf
@@ -72,6 +72,7 @@ endif::latexmath[]
   <div><a href="index.html">About</a></div>
   <div><a href="development.html">Development</a></div>   
   <div><a href="contact.html">Contact</a></div>
+# <div><a href="credits.html">Credits</a></div>
   <div id="page-source"><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
 </td>
 <td>
