Added uwiki.txt page, fixed metadata
Also:
Added admonition icons
Added 3 sidemenu items for credits, uWikii, FAQ (commented, in layout.conf)
Small fixes at style

--- a/layout1.conf
+++ b/layout1.conf
@@ -38,11 +38,11 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <meta http-equiv="Content-Type" content="text/html; charset={encoding}" />
 <meta name="generator" content="AsciiDoc {asciidoc-version}" />
 ifdef::index-only[]
-<meta name="description" content="Text based document generation" />
-<meta name="keywords" content="text to HTML, text to DocBook, text to XML, AsciiDoc" />
+<meta name="description" content="The new NLE for Linux" />
+<meta name="keywords" content="NLE, video editing, Linux" />
 endif::index-only[]
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}.css" type="text/css" />
-{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
+#{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-quirks.css" type="text/css" />
 <link rel="stylesheet" href="{stylesdir=.}/layout1.css" type="text/css" />
 ifdef::toc[]
@@ -73,7 +73,9 @@ endif::latexmath[]
   <div><a href="development.html">Development</a></div>   
   <div><a href="contact.html">Contact</a></div>
 # <div><a href="credits.html">Credits</a></div>
-  <div id="page-source"><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
+# <div><a href="uwiki.html">uWiki</a></div>
+# <div><a href="faq.html">FAQ</a></div>
+<div id="page-source"><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
 </td>
 <td>
 <div id="layout-content">
