Added style (table) to the credits
Title still to fix (git complains about “Unresolved merge conflict”)
Embedded css still to be included.

--- a/layout1.conf
+++ b/layout1.conf
@@ -119,8 +119,8 @@ endif::doctype-manpage[]
 [footer]
 <div id="footer">
 <div id="footer-text">
-# Version {revision}<br />
-Last updated {localdate} {localtime}
+Last updated {localdate} {localtime}<br />
+AsciiDoc version {revision}
 </div>
 ifdef::badges[]
 <div id="footer-badges">
