Added "Credits" in the navigation bar
Also changed order in the "Thanks to" section.

--- a/layout1.conf
+++ b/layout1.conf
@@ -72,10 +72,11 @@ endif::latexmath[]
   <div><a href="index.html">About</a></div>
   <div><a href="development.html">Development</a></div>   
   <div><a href="contact.html">Contact</a></div>
-# <div><a href="credits.html">Credits</a></div>
+  <div><a href="credits.html">Credits</a></div>
 # <div><a href="uwiki.html">uWiki</a></div>
 # <div><a href="faq.html">FAQ</a></div>
-<div id="page-source"><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
+<div><a href="">&nbsp;</a></div>
+<div><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
 </td>
 <td>
 <div id="layout-content">
