add a link to the search form, quite premature

--- a/layout1.conf
+++ b/layout1.conf
@@ -76,6 +76,7 @@ endif::latexmath[]
 # <div><a href="uwiki.html">uWiki</a></div>
 # <div><a href="faq.html">FAQ</a></div>
 <div><a href="">&nbsp;</a></div>
+<div><a href="search.html">Search</a></div>
 <div><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
 </td>
 <td>
