Link to Lumiera Logo Contest

--- a/layout1.conf
+++ b/layout1.conf
@@ -78,6 +78,8 @@ endif::latexmath[]
 <div><a href="">&nbsp;</a></div>
 <div><a href="search.html">Search</a></div>
 <div><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
+<div><a href="">&nbsp;</a></div>
+<div><a href="http://www.pipapo.org/pipawiki/Lumiera/Logos">Logo Contest</a></div>
 </td>
 <td>
 <div id="layout-content">
