Replace "Linux" with "GNU/Linux"

--- a/layout1.conf
+++ b/layout1.conf
@@ -39,7 +39,7 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <meta name="generator" content="AsciiDoc {asciidoc-version}" />
 ifdef::index-only[]
 <meta name="description" content="The new NLE for Linux" />
-<meta name="keywords" content="NLE, video editing, Linux" />
+<meta name="keywords" content="NLE, video editing, GNU, Linux" />
 endif::index-only[]
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}.css" type="text/css" />
 #{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
@@ -64,7 +64,7 @@ endif::latexmath[]
 <body>
 <div id="layout-banner">
   <div id="layout-title">Lumiera</div>
-  <div id="layout-description">The new emerging NLE for Linux</div>
+  <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <table>
 <tr valign="top">
