Add menu entry for donations

--- a/layout1.conf
+++ b/layout1.conf
@@ -73,6 +73,7 @@ endif::latexmath[]
   <div><a href="development.html">Development</a></div>   
   <div><a href="contact.html">Contact</a></div>
   <div><a href="credits.html">Credits</a></div>
+  <div><a href="donations.html">Donate!</a></div>
 # <div><a href="uwiki.html">uWiki</a></div>
 # <div><a href="faq.html">FAQ</a></div>
 <div><a href="">&nbsp;</a></div>
