--- a/OldWebpage/layout1.conf
+++ b/OldWebpage/layout1.conf
@@ -38,11 +38,11 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <meta http-equiv="Content-Type" content="text/html; charset={encoding}" />
 <meta name="generator" content="AsciiDoc {asciidoc-version}" />
 ifdef::index-only[]
-<meta name="description" content="Text based document generation" />
-<meta name="keywords" content="text to HTML, text to DocBook, text to XML, AsciiDoc" />
+<meta name="description" content="The new NLE for Linux" />
+<meta name="keywords" content="NLE, video editing, GNU, Linux" />
 endif::index-only[]
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}.css" type="text/css" />
-{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
+#{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-quirks.css" type="text/css" />
 <link rel="stylesheet" href="{stylesdir=.}/layout1.css" type="text/css" />
 ifdef::toc[]
@@ -63,24 +63,22 @@ endif::latexmath[]
 </head>
 <body>
 <div id="layout-banner">
-  <div id="layout-title">AsciiDoc</div>
-  <div id="layout-description">Text based document generation</div>
+  <div id="layout-title">Lumiera</div>
+  <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <table>
 <tr valign="top">
 <td id="layout-menu">
-  <div>&#187;<a href="index.html">Home</a></div>
-  <div>&#187;<a href="manpage.html">Man&nbsp;Page</a></div>
-  <div>&#187;<a href="userguide.html">User&nbsp;Guide</a></div>
-  <div>&#187;<a href="http://powerman.name/doc/asciidoc">Cheatsheet</a></div>
-  <div>&#187;<a href="a2x.1.html">a2x</a></div>
-  <div>&#187;<a href="README.html">README</a></div>
-  <div>&#187;<a href="CHANGELOG.html">ChangeLog</a></div>
-  <div>&#187;<a href="INSTALL.html">Installation</a></div>
-  <div>&#187;<a href="downloads.html">Downloads</a></div>
-  <div>&#187;<a href="faq.html">FAQ</a></div>
-  <div>&#187;<a href="support.html">Support</a></div>
-  <div id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
+  <div><a href="index.html">About</a></div>
+  <div><a href="development.html">Development</a></div>   
+  <div><a href="contact.html">Contact</a></div>
+  <div><a href="credits.html">Credits</a></div>
+  <div><a href="donations.html">Donate!</a></div>
+# <div><a href="uwiki.html">uWiki</a></div>
+# <div><a href="faq.html">FAQ</a></div>
+<div><a href="">&nbsp;</a></div>
+<div><a href="search.html">Search</a></div>
+<div><a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
 </td>
 <td>
 <div id="layout-content">
@@ -124,8 +122,8 @@ endif::doctype-manpage[]
 [footer]
 <div id="footer">
 <div id="footer-text">
-Version {revision}<br />
-Last updated {localdate} {localtime}
+Last updated {localdate} {localtime}<br />
+AsciiDoc version {revision}
 </div>
 ifdef::badges[]
 <div id="footer-badges">
@@ -136,19 +134,14 @@ endif::textonly[]
 ifndef::textonly[]
 <a href="http://validator.w3.org/check?uri=referer">
   <img style="border:none; width:88px; height:31px;"
-       src="http://www.w3.org/Icons/valid-xhtml11"
+       src="http://www.w3.org/Icons/valid-xhtml11-blue"
        alt="Valid XHTML 1.1!" />
 </a>
-<a href="http://jigsaw.w3.org/css-validator/check/referer">
-  <img style="border:none; width:88px; height:31px;"
-       src="http://jigsaw.w3.org/css-validator/images/vcss" 
-       alt="Valid CSS!" />
+<a href="http://jigsaw.w3.org/css-validator/">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" />
 </a>
-<a href="http://www.mozilla.org/products/firefox/">
-  <img style="border:none; width:110px; height:32px;"
-       src="http://www.spreadfirefox.com/community/images/affiliates/Buttons/110x32/safer.gif"
-       alt="Get Firefox!" />
-</a> 
 endif::textonly[]
 </div>
 endif::badges[]
@@ -159,3 +152,4 @@ endif::badges[]
 </table>
 </body>
 </html>
+
