--- a/layout2.conf
+++ b/layout2.conf
@@ -1,6 +1,9 @@
 #
 # AsciiDoc website.
-# Three division table based layout (layout1).
+# Three division CSS based layout (layout2).
+#
+# Simulated frames using CSS (fixed banner and menu, scrolling content).
+# NOTE: This layout does not work with IE6.
 #  
 # +-----------------------------------------------------+
 # |          #layout-banner                             |
@@ -13,14 +16,8 @@
 # |              |                                      |
 # +--------------+--------------------------------------+
 #
-# - The #layout-menu and #layout-content divisions are contained in a
-#   two cell table.
-#   I would be nice to use pure CSS for the layout but the table is better for
-#   this layout because:
-#
-#   * The column widths automatically size to fit column width (specifically
-#     the #layout-menu)
-#   * The column heights automatically size to the tallest.
+# Each of the three divisions is enclosed in a same-named *-box division
+# which position and size the layout.
 #
 # - The #layout-content division is a container for AsciiDoc page documents.
 # - Documents rendered in the #layout-content use the standard AsciiDoc
@@ -43,8 +40,10 @@ ifdef::index-only[]
 endif::index-only[]
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
+ifdef::quirks[]
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-quirks.css" type="text/css" />
-<link rel="stylesheet" href="{stylesdir=.}/layout1.css" type="text/css" />
+endif::quirks[]
+<link rel="stylesheet" href="{stylesdir=.}/layout2.css" type="text/css" />
 ifdef::toc[]
 <script type="text/javascript">
 /*<![CDATA[*/
@@ -62,27 +61,27 @@ endif::latexmath[]
 <title>{doctitle}</title>
 </head>
 <body>
+<div id="layout-banner-box">
 <div id="layout-banner">
   <div id="layout-title">AsciiDoc</div>
   <div id="layout-description">Text based document generation</div>
 </div>
-<table>
-<tr valign="top">
-<td id="layout-menu">
+</div>
+<div id="layout-menu-box">
+<div id="layout-menu">
   <div>&#187;<a href="index.html">Home</a></div>
   <div>&#187;<a href="manpage.html">Man&nbsp;Page</a></div>
   <div>&#187;<a href="userguide.html">User&nbsp;Guide</a></div>
-  <div>&#187;<a href="http://powerman.name/doc/asciidoc">Cheatsheet</a></div>
   <div>&#187;<a href="a2x.1.html">a2x</a></div>
   <div>&#187;<a href="README.html">README</a></div>
   <div>&#187;<a href="CHANGELOG.html">ChangeLog</a></div>
-  <div>&#187;<a href="INSTALL.html">Installation</a></div>
   <div>&#187;<a href="downloads.html">Downloads</a></div>
   <div>&#187;<a href="faq.html">FAQ</a></div>
   <div>&#187;<a href="support.html">Support</a></div>
   <div id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
-</td>
-<td>
+</div>
+</div>
+<div id="layout-content-box">
 <div id="layout-content">
 # Article, book header.
 ifndef::doctype-manpage[]
@@ -154,8 +153,6 @@ endif::textonly[]
 endif::badges[]
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
