Get rid of <table> for page layout, use floating <div>s instead

--- a/layout1.conf
+++ b/layout1.conf
@@ -66,9 +66,7 @@ endif::latexmath[]
   <div id="layout-title">AsciiDoc</div>
   <div id="layout-description">Text based document generation</div>
 </div>
-<table>
-<tr valign="top">
-<td id="layout-menu">
+<div id="layout-menu">
   <div>&#187;<a href="index.html">Home</a></div>
   <div>&#187;<a href="manpage.html">Man&nbsp;Page</a></div>
   <div>&#187;<a href="userguide.html">User&nbsp;Guide</a></div>
@@ -81,8 +79,7 @@ endif::latexmath[]
   <div>&#187;<a href="faq.html">FAQ</a></div>
   <div>&#187;<a href="support.html">Support</a></div>
   <div id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
-</td>
-<td>
+</div>
 <div id="layout-content">
 # Article, book header.
 ifndef::doctype-manpage[]
@@ -154,8 +151,5 @@ endif::textonly[]
 endif::badges[]
 </div>
 </div>
-</td>
-</tr>
-</table>
 </body>
 </html>
