Menu is a list of links, so use a HTML <ul> list, not just <div>s

--- a/layout1.conf
+++ b/layout1.conf
@@ -67,18 +67,20 @@ endif::latexmath[]
   <div id="layout-description">Text based document generation</div>
 </div>
 <div id="layout-menu">
-  <div>&#187;<a href="index.html">Home</a></div>
-  <div>&#187;<a href="manpage.html">Man&nbsp;Page</a></div>
-  <div>&#187;<a href="userguide.html">User&nbsp;Guide</a></div>
-  <div>&#187;<a href="http://powerman.name/doc/asciidoc">Cheatsheet</a></div>
-  <div>&#187;<a href="a2x.1.html">a2x</a></div>
-  <div>&#187;<a href="README.html">README</a></div>
-  <div>&#187;<a href="CHANGELOG.html">ChangeLog</a></div>
-  <div>&#187;<a href="INSTALL.html">Installation</a></div>
-  <div>&#187;<a href="downloads.html">Downloads</a></div>
-  <div>&#187;<a href="faq.html">FAQ</a></div>
-  <div>&#187;<a href="support.html">Support</a></div>
-  <div id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></div>
+  <ul>
+    <li>&#187;<a href="index.html">Home</a></li>
+    <li>&#187;<a href="manpage.html">Man&nbsp;Page</a></li>
+    <li>&#187;<a href="userguide.html">User&nbsp;Guide</a></li>
+    <li>&#187;<a href="http://powerman.name/doc/asciidoc">Cheatsheet</a></li>
+    <li>&#187;<a href="a2x.1.html">a2x</a></li>
+    <li>&#187;<a href="README.html">README</a></li>
+    <li>&#187;<a href="CHANGELOG.html">ChangeLog</a></li>
+    <li>&#187;<a href="INSTALL.html">Installation</a></li>
+    <li>&#187;<a href="downloads.html">Downloads</a></li>
+    <li>&#187;<a href="faq.html">FAQ</a></li>
+    <li>&#187;<a href="support.html">Support</a></li>
+    <li id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></li>
+  </ul>
 </div>
 <div id="layout-content">
 # Article, book header.
