Menu: links now point to "our" content Merge form OldWebsite the CSS for the credits page

--- a/layout1.conf
+++ b/layout1.conf
@@ -38,8 +38,8 @@ monospacedwords=(?u)\\?\basciidoc\(1\) (?u)\\?\ba2x\(1\)
 <meta http-equiv="Content-Type" content="text/html; charset={encoding}" />
 <meta name="generator" content="AsciiDoc {asciidoc-version}" />
 ifdef::index-only[]
-<meta name="description" content="Text based document generation" />
-<meta name="keywords" content="text to HTML, text to DocBook, text to XML, AsciiDoc" />
+<meta name="description" content="The new NLE for Linux" />
+<meta name="keywords" content="NLE, video editing, GNU, Linux, professional, open source, OSS" />
 endif::index-only[]
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
@@ -68,16 +68,12 @@ endif::latexmath[]
 <div id="layout-menu">
   <ul>
     <li>&#187;<a href="index.html">Home</a></li>
-    <li>&#187;<a href="manpage.html">Man&nbsp;Page</a></li>
-    <li>&#187;<a href="userguide.html">User&nbsp;Guide</a></li>
-    <li>&#187;<a href="http://powerman.name/doc/asciidoc">Cheatsheet</a></li>
-    <li>&#187;<a href="a2x.1.html">a2x</a></li>
-    <li>&#187;<a href="README.html">README</a></li>
-    <li>&#187;<a href="CHANGELOG.html">ChangeLog</a></li>
-    <li>&#187;<a href="INSTALL.html">Installation</a></li>
-    <li>&#187;<a href="downloads.html">Downloads</a></li>
+    <li>&#187;<a href="development.html">Development</a></li>
+    <li>&#187;<a href="contact.html">Contact</a></li>
+    <li>&#187;<a href="credits.html">Credits</a></li>
+    <li>&#187;<a href="donations.html">Donations</a></li>
     <li>&#187;<a href="faq.html">FAQ</a></li>
-    <li>&#187;<a href="support.html">Support</a></li>
+    <li>&#187;<a href="search.html">Search</a></li>
     <li id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></li>
   </ul>
 </div>
