Fix banner text

--- a/layout1.conf
+++ b/layout1.conf
@@ -62,8 +62,8 @@ endif::latexmath[]
 </head>
 <body>
 <div id="layout-banner">
-  <div id="layout-title">AsciiDoc</div>
-  <div id="layout-description">Text based document generation</div>
+  <div id="layout-title">Lumiera</div>
+  <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <div id="layout-menu">
   <ul>
