changed the menu items according to the new website structure

--- a/layout1.conf
+++ b/layout1.conf
@@ -68,12 +68,11 @@ endif::latexmath[]
 <div id="layout-menu">
   <ul>
     <li>&#187;<a href="index.html">Home</a></li>
-    <li>&#187;<a href="development.html">Development</a></li>
-    <li>&#187;<a href="contact.html">Contact</a></li>
-    <li>&#187;<a href="credits.html">Credits</a></li>
-    <li>&#187;<a href="donations.html">Donations</a></li>
-    <li>&#187;<a href="faq.html">FAQ</a></li>
-    <li>&#187;<a href="search.html">Search</a></li>
+    <li>&#187;<a href="project/index.html">Project</a></li>
+    <li>&#187;<a href="download.html">Download</a></li>
+    <li>&#187;<a href="contribute.html">Contribute</a></li>
+    <li>&#187;<a href="documentation/index.html">Documentation</a></li>
+    <li>&#187;<a href="devs-vault/index.html">Devs-Vault</a></li>
     <li id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></li>
   </ul>
 </div>
