bjmr initial site work
I moved a few more things to match the sitemap.txt structure. I ammended
several txts and added a class {attribute} hook to layout1.conf made a
img dir and some other minor movements.

--- a/layout1.conf
+++ b/layout1.conf
@@ -61,7 +61,7 @@ endif::latexmath[]
 <title>{doctitle}</title>
 </head>
 <body>
-<div id="layout-banner">
+<div id="layout-banner" class="{navsection}">
   <div id="layout-title">Lumiera</div>
   <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
