Incorporating CSS navigation & basic page layout
Added css menu to the .conf and layout1.css. Configured the layout
of the page through layout1.conf. Edited both css for formatting
and cleaned up values. Moved div.footer attributes to layout1.conf
as they belong there rather than in the content css. Fixed banner
so it works reliably (I hope).

--- a/layout1.conf
+++ b/layout1.conf
@@ -61,20 +61,64 @@ endif::latexmath[]
 <title>{doctitle}</title>
 </head>
 <body>
-<div id="layout-banner" class="{navsection}">
+<div id="layout-banner">
   <div id="layout-title">Lumiera</div>
   <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
-<div id="layout-menu">
-  <ul>
-    <li>&#187;<a href="index.html">Home</a></li>
-    <li>&#187;<a href="project/index.html">Project</a></li>
-    <li>&#187;<a href="download.html">Download</a></li>
-    <li>&#187;<a href="contribute.html">Contribute</a></li>
-    <li>&#187;<a href="documentation/index.html">Documentation</a></li>
-    <li>&#187;<a href="devs-vault/index.html">Devs-Vault</a></li>
-    <li id="page-source">&#187;<a href="{eval:os.path.basename('{infile}')}">Page&nbsp;Source</a></li>
+<div id="wrapper">
+ <div id="menu">
+<label for="navhome" class="toggle" id="navtop">
+<a href="index.html" class="nav">Home</a> 
+</label>
+
+<label for="navdownload" class="toggle">
+<a href="download.html" class="nav">Download</a> 
+</label>
+  
+<label for="navcontribute" class="toggle">
+<a href="contribute.html" class="nav">Contribute</a> 
+</label>
+  
+<label for="navproject" class="toggle">
+<a href="project/index.html" class="nav">Project</a>
++
+</label>
+   <input id="navproject" type="checkbox" class="toggle" checked="checked" />
+   <ul class=subnav>
+	<li class=subnav> <a href="project/screenshots.html"> Screenshots </a></li>
+    <li class=subnav> <a href="project/press.html"> Press </a></li>
+	<li class=subnav> <a href="project/donate.html"> Donate </a></li>
+	<li class=subnav> <a href="project/roadmap.html"> Roadmap </a></li>
+	<li class=subnav> <a href="project/credits.html"> Credits </a></li>
+	<li class=subnav> <a href="project/contact.html"> Contact </a></li>
   </ul>
+  
+<label for="navdocumentation" class="toggle">
+<a href="documentation/index.html" class="nav">Documentation</a>
++
+</label>
+  <input id="navdocumentation" type="checkbox" class="toggle" checked="checked" />
+  <ul class=subnav>
+	<li class=subnav><a href="documentation/media.html"> Media </a></li>
+    <li class=subnav><a href="documentation/technical.html"> Technical </a></li>
+	<li class=subnav><a href="documentation/design.html"> Design </a></li>
+  </ul>
+
+<label for="navdevs-vault" class="toggle">
+<a href="devs-vault/index.html" class="nav">Dev's Vault</a>
++
+</label>
+<input id="navdevs-vault" type="checkbox" class="toggle" checked="checked" />
+  <ul class=subnav>
+	<li class=subnav><a href="project/roadmap.html"> Roadmap </a></li>
+	<li class=subnav><a href="devs-vault/design-process.html"> Design Process </a></li>
+	<li class=subnav><a href="devs-vault/devs.html"> Developers </a></li>
+	<li class=subnav><a href="http://www.lumiera.org/gitweb"> Gitweb </a></li>
+	<li class=subnav><a href="/trac"> Trac-Reports </a></li>
+	<li class=subnav><a href="devs-vault/next-meeting/index.html"> Next Meeting </a></li>
+	<li class=subnav><a href="devs-vault/post-protocols/index.html"> Post Protocols </a></li>
+  </ul>
+  
 </div>
 <div id="layout-content">
 # Article, book header.
@@ -145,6 +189,7 @@ ifndef::textonly[]
 endif::textonly[]
 </div>
 endif::badges[]
+</div>
 </div>
 </div>
 </body>
