Working with relative/asciidoc generated links
Am trying (with apparent success) to use {docdir} string to set links (page nav, imgs, css etc) to a universal build root, as using 'root relative' /~/foo.file wasn't
working (not sure why). If successful, this commit will be followed by a full edit, or dicarded.

--- a/layout1.conf
+++ b/layout1.conf
@@ -41,9 +41,9 @@ ifdef::index-only[]
 <meta name="description" content="The new NLE for Linux" />
 <meta name="keywords" content="NLE, video editing, GNU, Linux, professional, open source, OSS" />
 endif::index-only[]
-<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}.css" type="text/css" />
+<link rel="stylesheet" href="{docdir}/xhtml11.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
-<link rel="stylesheet" href="{stylesdir=.}/layout1.css" type="text/css" />
+<link rel="stylesheet" href="{docdir}/layout1.css" type="text/css" />
 ifdef::toc[]
 <script type="text/javascript">
 /*<![CDATA[*/
@@ -68,29 +68,29 @@ endif::latexmath[]
 <div id="wrapper">
  <div id="menu">
 <label for="navhome" class="toggle" id="navtop">
-<a href="index.html" class="nav">Home</a> 
+<a href="/index.html" class="nav">Home</a> 
 </label>
 
 <label for="navdownload" class="toggle">
-<a href="download.html" class="nav">Download</a> 
+<a href="/download.html" class="nav">Download</a> 
 </label>
   
 <label for="navcontribute" class="toggle">
-<a href="contribute.html" class="nav">Contribute</a> 
+<a href="/contribute.html" class="nav">Contribute</a> 
 </label>
   
 <label for="navproject" class="toggle">
-<a href="project/index.html" class="nav">Project</a>
+<a href="/project/index.html" class="nav">Project</a>
 +
 </label>
    <input id="navproject" type="checkbox" class="toggle" checked="checked" />
    <ul class=subnav>
-	<li class=subnav> <a href="project/screenshots.html"> Screenshots </a></li>
-    <li class=subnav> <a href="project/press.html"> Press </a></li>
-	<li class=subnav> <a href="project/donate.html"> Donate </a></li>
-	<li class=subnav> <a href="project/roadmap.html"> Roadmap </a></li>
-	<li class=subnav> <a href="project/credits.html"> Credits </a></li>
-	<li class=subnav> <a href="project/contact.html"> Contact </a></li>
+	<li class=subnav> <a href="{docdir}/project/screenshots.html"> Screenshots </a></li>
+        <li class=subnav> <a href="/project/press.html"> Press </a></li>
+	<li class=subnav> <a href="/project/donate.html"> Donate </a></li>
+	<li class=subnav> <a href="/project/roadmap.html"> Roadmap </a></li>
+	<li class=subnav> <a href="/project/credits.html"> Credits </a></li>
+	<li class=subnav> <a href="/project/contact.html"> Contact </a></li>
   </ul>
   
 <label for="navdocumentation" class="toggle">
@@ -99,9 +99,9 @@ endif::latexmath[]
 </label>
   <input id="navdocumentation" type="checkbox" class="toggle" checked="checked" />
   <ul class=subnav>
-	<li class=subnav><a href="documentation/media.html"> Media </a></li>
-    <li class=subnav><a href="documentation/technical.html"> Technical </a></li>
-	<li class=subnav><a href="documentation/design.html"> Design </a></li>
+	<li class=subnav><a href="/documentation/media.html"> Media </a></li>
+    	<li class=subnav><a href="/documentation/technical.html"> Technical </a></li>
+	<li class=subnav><a href="/documentation/design.html"> Design </a></li>
   </ul>
 
 <label for="navdevs-vault" class="toggle">
@@ -110,12 +110,12 @@ endif::latexmath[]
 </label>
 <input id="navdevs-vault" type="checkbox" class="toggle" checked="checked" />
   <ul class=subnav>
-	<li class=subnav><a href="project/roadmap.html"> Roadmap </a></li>
-	<li class=subnav><a href="devs-vault/design-process.html"> Design Process </a></li>
-	<li class=subnav><a href="devs-vault/devs.html"> Developers </a></li>
+	<li class=subnav><a href="/project/roadmap.html"> Roadmap </a></li>
+	<li class=subnav><a href="/devs-vault/design-process.html"> Design Process </a></li>
+	<li class=subnav><a href="/devs-vault/devs.html"> Developers </a></li>
 	<li class=subnav><a href="http://www.lumiera.org/gitweb"> Gitweb </a></li>
 	<li class=subnav><a href="/trac"> Trac-Reports </a></li>
-	<li class=subnav><a href="devs-vault/next-meeting/index.html"> Next Meeting </a></li>
+	<li class=subnav><a href="/devs-vault/next-meeting/index.html"> Next Meeting </a></li>
 	<li class=subnav><a href="devs-vault/post-protocols/index.html"> Post Protocols </a></li>
   </ul>
   
