Fix for last commit
Just reverting layout1.conf because the linking sheme did not work as I had hoped.

--- a/layout1.conf
+++ b/layout1.conf
@@ -41,9 +41,9 @@ ifdef::index-only[]
 <meta name="description" content="The new NLE for Linux" />
 <meta name="keywords" content="NLE, video editing, GNU, Linux, professional, open source, OSS" />
 endif::index-only[]
-<link rel="stylesheet" href="{docdir}/xhtml11.css" type="text/css" />
+<link rel="stylesheet" href="/xhtml11.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
-<link rel="stylesheet" href="{docdir}/layout1.css" type="text/css" />
+<link rel="stylesheet" href="/layout1.css" type="text/css" />
 ifdef::toc[]
 <script type="text/javascript">
 /*<![CDATA[*/
@@ -85,7 +85,7 @@ endif::latexmath[]
 </label>
    <input id="navproject" type="checkbox" class="toggle" checked="checked" />
    <ul class=subnav>
-	<li class=subnav> <a href="{docdir}/project/screenshots.html"> Screenshots </a></li>
+	<li class=subnav> <a href="/project/screenshots.html"> Screenshots </a></li>
         <li class=subnav> <a href="/project/press.html"> Press </a></li>
 	<li class=subnav> <a href="/project/donate.html"> Donate </a></li>
 	<li class=subnav> <a href="/project/roadmap.html"> Roadmap </a></li>
