Fixed relative/root problems with asciidoc attributes
Because of a bug (likely apache config) that was falsly rendering relative and root-relative links in the html, I added a attribute to layout1.conf that adds the absolute root domain:
http://staging.lumiera.org to the links. This can be changed for doing local testing to match the directory tree of the local repo. Fixes both css linking problems from subdirs and
navigation links. Hopelfully.

--- a/layout1.conf
+++ b/layout1.conf
@@ -2,29 +2,28 @@
 # AsciiDoc website.
 # Three division table based layout (layout1).
 #  
-# +-----------------------------------------------------+
-# |          #layout-banner                             |
-# +--------------+--------------------------------------+
-# |              |                                      |
-# |              |                                      |
-# | #layout-menu |          #layout-content             |
-# |              |                                      |
-# |              |                                      |
-# |              |                                      |
-# +--------------+--------------------------------------+
-#
-# - The #layout-menu and #layout-content divisions are contained in a
-#   two cell table.
-#   I would be nice to use pure CSS for the layout but the table is better for
-#   this layout because:
-#
-#   * The column widths automatically size to fit column width (specifically
-#     the #layout-menu)
-#   * The column heights automatically size to the tallest.
-#
+# +-------------------------------------------------------+
+# |          #layout-banner                               |
+# +-------------------------------------------------------+
+# +----#wrapper-------------------------------------------+
+# |+--------------+--------------------------------------+|
+# ||              |                                      ||
+# ||              |                                      ||
+# || #menu        |          #layout-content             ||
+# ||              |                                      ||
+# ||              +-------------------------------------+||
+# ||              |          #footer                     ||
+# |+--------------+--------------------------------------+|
+# +-------------------------------------------------------+
+# 
+#   #layout banner stays a top
+#   #wrapper holds all the <divs> that make up the 
 # - The #layout-content division is a container for AsciiDoc page documents.
 # - Documents rendered in the #layout-content use the standard AsciiDoc
 #   xhtml11 backend stylesheets.
+
+[attributes]
+l=http://staging.lumiera.org
 
 [specialwords]
 emphasizedwords=(?u)\\?\bAsciiDoc\b
@@ -41,9 +40,9 @@ ifdef::index-only[]
 <meta name="description" content="The new NLE for Linux" />
 <meta name="keywords" content="NLE, video editing, GNU, Linux, professional, open source, OSS" />
 endif::index-only[]
-<link rel="stylesheet" href="/xhtml11.css" type="text/css" />
+<link rel="stylesheet" href="{l}/xhtml11.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
-<link rel="stylesheet" href="/layout1.css" type="text/css" />
+<link rel="stylesheet" href="{l}/layout1.css" type="text/css" />
 ifdef::toc[]
 <script type="text/javascript">
 /*<![CDATA[*/
@@ -68,55 +67,55 @@ endif::latexmath[]
 <div id="wrapper">
  <div id="menu">
 <label for="navhome" class="toggle" id="navtop">
-<a href="/index.html" class="nav">Home</a> 
+<a href="{l}/index.html" class="nav">Home</a> 
 </label>
 
 <label for="navdownload" class="toggle">
-<a href="/download.html" class="nav">Download</a> 
+<a href="{l}/download.html" class="nav">Download</a> 
 </label>
   
 <label for="navcontribute" class="toggle">
-<a href="/contribute.html" class="nav">Contribute</a> 
+<a href="{l}/contribute.html" class="nav">Contribute</a> 
 </label>
   
 <label for="navproject" class="toggle">
-<a href="/project/index.html" class="nav">Project</a>
+<a href="{l}/project/index.html" class="nav">Project</a>
 +
 </label>
    <input id="navproject" type="checkbox" class="toggle" checked="checked" />
    <ul class=subnav>
-	<li class=subnav> <a href="/project/screenshots.html"> Screenshots </a></li>
-        <li class=subnav> <a href="/project/press.html"> Press </a></li>
-	<li class=subnav> <a href="/project/donate.html"> Donate </a></li>
-	<li class=subnav> <a href="/project/roadmap.html"> Roadmap </a></li>
-	<li class=subnav> <a href="/project/credits.html"> Credits </a></li>
-	<li class=subnav> <a href="/project/contact.html"> Contact </a></li>
+	<li class=subnav> <a href="{l}/project/screenshots.html"> Screenshots </a></li>
+        <li class=subnav> <a href="{l}/project/press.html"> Press </a></li>
+	<li class=subnav> <a href="{l}/project/donate.html"> Donate </a></li>
+	<li class=subnav> <a href="{l}/project/roadmap.html"> Roadmap </a></li>
+	<li class=subnav> <a href="{l}/project/credits.html"> Credits </a></li>
+	<li class=subnav> <a href="{l}/project/contact.html"> Contact </a></li>
   </ul>
   
 <label for="navdocumentation" class="toggle">
-<a href="documentation/index.html" class="nav">Documentation</a>
+<a href="{l}/documentation/index.html" class="nav">Documentation</a>
 +
 </label>
   <input id="navdocumentation" type="checkbox" class="toggle" checked="checked" />
   <ul class=subnav>
-	<li class=subnav><a href="/documentation/media.html"> Media </a></li>
-    	<li class=subnav><a href="/documentation/technical.html"> Technical </a></li>
-	<li class=subnav><a href="/documentation/design.html"> Design </a></li>
+	<li class=subnav><a href="{l}/documentation/media.html"> Media </a></li>
+    	<li class=subnav><a href="{l}/documentation/technical.html"> Technical </a></li>
+	<li class=subnav><a href="{l}/documentation/design.html"> Design </a></li>
   </ul>
 
 <label for="navdevs-vault" class="toggle">
-<a href="devs-vault/index.html" class="nav">Dev's Vault</a>
+<a href="{l}/devs-vault/index.html" class="nav">Dev's Vault</a>
 +
 </label>
 <input id="navdevs-vault" type="checkbox" class="toggle" checked="checked" />
   <ul class=subnav>
-	<li class=subnav><a href="/project/roadmap.html"> Roadmap </a></li>
-	<li class=subnav><a href="/devs-vault/design-process.html"> Design Process </a></li>
-	<li class=subnav><a href="/devs-vault/devs.html"> Developers </a></li>
+	<li class=subnav><a href="{l}/project/roadmap.html"> Roadmap </a></li>
+	<li class=subnav><a href="{l}/devs-vault/design-process.html"> Design Process </a></li>
+	<li class=subnav><a href="{l}/devs-vault/devs.html"> Developers </a></li>
 	<li class=subnav><a href="http://www.lumiera.org/gitweb"> Gitweb </a></li>
-	<li class=subnav><a href="/trac"> Trac-Reports </a></li>
-	<li class=subnav><a href="/devs-vault/next-meeting/index.html"> Next Meeting </a></li>
-	<li class=subnav><a href="devs-vault/post-protocols/index.html"> Post Protocols </a></li>
+	<li class=subnav><a href="{l}/trac"> Trac-Reports </a></li>
+	<li class=subnav><a href="{l}/devs-vault/next-meeting/index.html"> Next Meeting </a></li>
+	<li class=subnav><a href="{l}/devs-vault/post-protocols/index.html"> Post Protocols </a></li>
   </ul>
   
 </div>
