A few edits to todo.txt and quickstart.txt, small menu edits
Roadmap menu items now point to http://issues.lumiera.org/roadmap, trac menu item to http://issues.lumiera.org/ the design-process link in the devs-vault has been
hidden with html comment <!-- --> until that gets worked out.

Fixed column formatting in todo & quickstart and other minor edits to them.

--- a/layout1.conf
+++ b/layout1.conf
@@ -84,12 +84,12 @@ endif::latexmath[]
 </label>
    <input id="navproject" type="checkbox" class="toggle" checked="checked" />
    <ul class=subnav>
-	<li class=subnav> <a href="{l}/project/screenshots.html"> Screenshots </a></li>
+        <li class=subnav> <a href="{l}/project/screenshots.html"> Screenshots </a></li>
         <li class=subnav> <a href="{l}/project/press.html"> Press </a></li>
-	<li class=subnav> <a href="{l}/project/donate.html"> Donate </a></li>
-	<li class=subnav> <a href="{l}/project/roadmap.html"> Roadmap </a></li>
-	<li class=subnav> <a href="{l}/project/credits.html"> Credits </a></li>
-	<li class=subnav> <a href="{l}/project/contact.html"> Contact </a></li>
+        <li class=subnav> <a href="{l}/project/donate.html"> Donate </a></li>
+        <li class=subnav> <a href="http://issues.lumiera.org/roadmap"> Roadmap </a></li>
+        <li class=subnav> <a href="{l}/project/credits.html"> Credits </a></li>
+        <li class=subnav> <a href="{l}/project/contact.html"> Contact </a></li>
   </ul>
   
 <label for="navdocumentation" class="toggle">
@@ -98,9 +98,9 @@ endif::latexmath[]
 </label>
   <input id="navdocumentation" type="checkbox" class="toggle" checked="checked" />
   <ul class=subnav>
-	<li class=subnav><a href="{l}/documentation/media.html"> Media </a></li>
-    	<li class=subnav><a href="{l}/documentation/technical.html"> Technical </a></li>
-	<li class=subnav><a href="{l}/documentation/design.html"> Design </a></li>
+        <li class=subnav><a href="{l}/documentation/media/index.html"> Media </a></li>
+  	<li class=subnav><a href="{l}/documentation/technical/index.html"> Technical </a></li>
+        <li class=subnav><a href="{l}/documentation/design/index.html"> Design </a></li>
   </ul>
 
 <label for="navdevs-vault" class="toggle">
@@ -109,13 +109,13 @@ endif::latexmath[]
 </label>
 <input id="navdevs-vault" type="checkbox" class="toggle" checked="checked" />
   <ul class=subnav>
-	<li class=subnav><a href="{l}/project/roadmap.html"> Roadmap </a></li>
-	<li class=subnav><a href="{l}/devs-vault/design-process.html"> Design Process </a></li>
-	<li class=subnav><a href="{l}/devs-vault/devs.html"> Developers </a></li>
-	<li class=subnav><a href="http://www.lumiera.org/gitweb"> Gitweb </a></li>
-	<li class=subnav><a href="{l}/trac"> Trac-Reports </a></li>
-	<li class=subnav><a href="{l}/devs-vault/next-meeting/index.html"> Next Meeting </a></li>
-	<li class=subnav><a href="{l}/devs-vault/post-protocols/index.html"> Post Protocols </a></li>
+        <li class=subnav><a href="http://issues.lumiera.org/roadmap"> Roadmap </a></li>
+        <li class=subnav><a href="{l}/devs-vault/design-process.html"> <!-- Design Process --> </a></li>
+        <li class=subnav><a href="{l}/devs-vault/devs.html"> Developers </a></li>
+        <li class=subnav><a href="http://www.lumiera.org/gitweb"> Gitweb </a></li>
+        <li class=subnav><a href="http://www.lumiera.org/report"> Trac-Reports </a></li>
+        <li class=subnav><a href="{l}/devs-vault/next-meeting/index.html"> Next Meeting </a></li>
+        <li class=subnav><a href="{l}/devs-vault/post-protocols/index.html"> Post Protocols </a></li>
   </ul>
   
 </div>
