Corrected scriptsdir, absolute location, not relative

--- a/layout1.conf
+++ b/layout1.conf
@@ -24,7 +24,7 @@
 
 [attributes]
 l=http://staging.lumiera.org
-scriptsdir=./js
+scriptsdir=/js
 
 [specialwords]
 emphasizedwords=(?u)\\?\bAsciiDoc\b
