--- a/layout1.conf
+++ b/layout1.conf
@@ -67,35 +67,10 @@ endif::latexmath[]
   <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <div id="wrapper">
- <ul id="menu">
-  <li><a href="{l}/index.html">Home</a>
-  <li><a href="{l}/download.html">Download</a>
-  <li><a href="{l}/contribute.html" class="nav">Contribute</a>
-  <li><a href="{l}/project/index.html" class="nav">Project</a>
-    <ul>
-        <li><a href="{l}/project/screenshots.html"> Screenshots </a></li>
-        <li><a href="{l}/project/press.html"> Press </a></li>
-        <li><a href="{l}/project/donate.html"> Donate </a></li>
-        <li><a href="http://issues.lumiera.org/roadmap"> Roadmap </a></li>
-        <li><a href="{l}/project/credits.html"> Credits </a></li>
-        <li><a href="{l}/project/contact.html"> Contact </a></li>
-    </ul>
-  <li><a href="{l}/documentation/index.html" class="nav">Documentation</a>
-    <ul>
-        <li><a href="{l}/documentation/media/index.html"> Media </a></li>
-        <li><a href="{l}/documentation/technical/index.html"> Technical </a></li>
-        <li><a href="{l}/documentation/design/index.html"> Design </a></li>
-    </ul>
-  <li><a href="{l}/devs-vault/index.html" class="nav">Dev's Vault</a>
-    <ul>
-        <li><a href="http://issues.lumiera.org/roadmap"> Roadmap </a></li>
-        <li><a href="{l}/devs-vault/devs.html"> Developers </a></li>
-        <li><a href="http://www.lumiera.org/gitweb"> Gitweb </a></li>
-        <li><a href="http://www.lumiera.org/report"> Trac-Reports </a></li>
-        <li><a href="{l}/devs-vault/next-meeting/index.html"> Next Meeting </a></li>
-        <li><a href="{l}/devs-vault/post-protocols/index.html"> Post Protocols </a></li>
-    </ul>
-</ul>
+ <iframe id="inavi" name="inavi" src="{l}/menu.html">
+ <p>This should be the navigation menue, 
+    but unfortunately your browser can't display iFrames</p>
+ </iframe>
 
 <div id="layout-content">
 # Article, book header.
