adjusted and moved some additional asciidoced documentation to main repo

--- a/layout1.conf
+++ b/layout1.conf
@@ -24,6 +24,9 @@
 
 [attributes]
 l=http://staging.lumiera.org
+ldoc=/documentation
+img=/media/img
+imgg=/media/img/design.gui
 scriptsdir=/js
 
 [specialwords]
