better CSS and Asccidoc.conf names; split CSS in page and menu

--- a/page.conf
+++ b/page.conf
@@ -1,5 +1,7 @@
 #
-# AsciiDoc website.
+# Lumiera Website Page
+# AsciiDoc configuation
+#
 # Three division table based layout (layout1).
 #  
 # +-------------------------------------------------------+
@@ -46,7 +48,7 @@ ifdef::index-only[]
 endif::index-only[]
 <link rel="stylesheet" href="{l}/xhtml11.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
-<link rel="stylesheet" href="{l}/layout1.css" type="text/css" />
+<link rel="stylesheet" href="{l}/page.css" type="text/css" />
 <script type="text/javascript" src="{scriptsdir=.}/menu.js" defer="defer"></script>
 ifdef::toc[]
 <script type="text/javascript">
