--- a/page.conf
+++ b/page.conf
@@ -27,7 +27,9 @@
 [attributes]
 l=http://staging.lumiera.org
 ldoc=/documentation
+rfc=/documentation/devel/rfc
 img=/media/img
+imgd=/documentation/devel/images
 imgg=/media/img/design.gui
 scriptsdir=/js
 
