Make the {img} macro point to /images

--- a/page.conf
+++ b/page.conf
@@ -28,7 +28,7 @@
 l=http://staging.lumiera.org
 ldoc=/documentation
 rfc=/documentation/devel/rfc
-img=/media/img
+img=/images
 imgd=/documentation/devel/images
 imgg=/media/img/design.gui
 scriptsdir=/js
