Fix credits page.

--- a/project/credits.conf
+++ b/project/credits.conf
@@ -17,7 +17,7 @@ endif::index-only[]
 #{doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
 <link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-quirks.css" type="text/css" />
 <link rel="stylesheet" href="{stylesdir=.}/layout1.css" type="text/css" />
-<link rel="stylesheet" href="/css/credits.css" type="text/css" />
+<link rel="stylesheet" href="/project/credits.css" type="text/css" />
 ifdef::toc[]
 <script type="text/javascript">
 /*<![CDATA[*/
