add mark-in-menu trigger to all pages

--- a/page.conf
+++ b/page.conf
@@ -52,14 +52,6 @@ endif::index-only[]
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
 <link rel="stylesheet" href="{l}/page.css" type="text/css" />
 <script type="text/javascript" src="{scriptsdir=.}/menu.js" defer="defer"></script>
-ifdef::toc[]
-<script type="text/javascript">
-/*<![CDATA[*/
-window.onload = function()\{generateToc({toclevels=2})\}
-/*]]>*/
-</script>
-<script type="text/javascript" src="{scriptsdir=.}/toc.js"></script>
-endif::toc[]
 ifdef::asciimath[]
 <script type="text/javascript" src="{scriptsdir=.}/ASCIIMathML.js"></script>
 endif::asciimath[]
@@ -74,7 +66,7 @@ endif::latexmath[]
   <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <div id="wrapper">
- <iframe id="inavi" name="inavi" src="{l}/menu.html">
+ <iframe id="inavi" name="inavi" src="{l}/menu.html" onload="markPageInMenu()>
  <p>This should be the navigation menue, 
     but unfortunately your browser can't display iFrames</p>
  </iframe>
@@ -89,12 +81,6 @@ ifndef::doctype-manpage[]
 {authored}<span id="revision">version {revision}{date?,}</span>
 {authored}{date}
 </div>
-ifdef::toc[]
-<div id="toc">
-  <div id="toctitle">Table of Contents</div>
-  <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
-</div>
-endif::toc[]
 endif::doctype-manpage[]
 # Man page header.
 ifdef::doctype-manpage[]
@@ -102,12 +88,6 @@ ifdef::doctype-manpage[]
 <h1>
 {doctitle} Manual Page
 </h1>
-ifdef::toc[]
-<div id="toc">
-  <div id="toctitle">Table of Contents</div>
-  <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
-</div>
-endif::toc[]
 <h2>NAME</h2>
 <div class="sectionbody">
 <p>{manname} -
