Menu JavaScript / CSS finished thus far
comment, cleanup, remove parts no longer needed.
'menu.html' now generated by menugen.py -p -w

--- a/page.conf
+++ b/page.conf
@@ -66,14 +66,14 @@ endif::latexmath[]
   <div id="layout-description">The new emerging NLE for GNU/Linux</div>
 </div>
 <div id="wrapper">
- <iframe id="inavi" name="inavi" src="{l}/menu.html" onload="markPageInMenu()>
+ <iframe id="inavi" name="inavi" src="{l}/menu.html" onload="markPageInMenu()">
  <p>This should be the navigation menue, 
     but unfortunately your browser can't display iFrames</p>
  </iframe>
 
 <div id="layout-content">
-# Article, book header.
-ifndef::doctype-manpage[]
+
+<!-- visible page header -->
 <div id="header">
 <h1>{doctitle}</h1>
 <span id="author">{author}</span><br />
@@ -81,21 +81,7 @@ ifndef::doctype-manpage[]
 {authored}<span id="revision">version {revision}{date?,}</span>
 {authored}{date}
 </div>
-endif::doctype-manpage[]
-# Man page header.
-ifdef::doctype-manpage[]
-<div id="header">
-<h1>
-{doctitle} Manual Page
-</h1>
-<h2>NAME</h2>
-<div class="sectionbody">
-<p>{manname} -
-   {manpurpose}
-</p>
-</div>
-</div>
-endif::doctype-manpage[]
+
 
 [footer]
 <div id="footer">
