move the CSS to separate subdirectory /css

--- a/page.conf
+++ b/page.conf
@@ -48,9 +48,9 @@ ifdef::index-only[]
 <meta name="description" content="The new NLE for Linux" />
 <meta name="keywords" content="NLE, video editing, GNU, Linux, professional, open source, OSS" />
 endif::index-only[]
-<link rel="stylesheet" href="{l}/xhtml11.css" type="text/css" />
+<link rel="stylesheet" href="/css/xhtml11.css" type="text/css" />
 {doctype-manpage}<link rel="stylesheet" href="{stylesdir=.}/{theme={backend}}-manpage.css" type="text/css" />
-<link rel="stylesheet" href="{l}/page.css" type="text/css" />
+<link rel="stylesheet" href="/css/page.css" type="text/css" />
 <script type="text/javascript" src="{scriptsdir=.}/menu.js" defer="defer"></script>
 ifdef::asciimath[]
 <script type="text/javascript" src="{scriptsdir=.}/ASCIIMathML.js"></script>
